--- a/pom.xml
+++ b/pom.xml
@@ -51,16 +51,31 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
 			<version>5.0.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-apt</artifactId>
 			<version>5.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -92,6 +107,7 @@
 						<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
 					</configuration>
 				</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
