--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#?????? ?? ??
-server.port=80
+#애플리케이션 포트 설정
+server.port=8000
 
-#MySQL ?? ??
+#MySQL 연결 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
 spring.datasource.username=root
@@ -23,5 +23,5 @@ spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache = false
 
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
